2012-05-15  Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/ipmimonitoring.map/: Explicitly list functions
	to avoid errant functions being made global.
	
2012-05-14  Albert Chu <chu11@llnl.gov>

	Cleanup sel-parse sub-library

	* Support IPMI_SEL_PARSE_ERR_SEL_ENTRIES_NOT_LOADED error code.

	* Properly trace all errors when debug tracing is enabled.

	* Condense both sets of record parsing functions into one set.

	* libfreeipmi/sel-parse/ipmi-sel-parse-common.h,
	libfreeipmi/sel-parse/ipmi-sel-parse-common.c (sel_parse_get_previous_state_or_severity):
	Change to _get_previous_state_or_severity and put in
	libfreeipmi/sel-parse/ipmi-sel-parse-string.c.

	* libfreeipmi/interpret/, common/toolevent/, ipmi-sel/, ipmi-pet/:
	Update appropriately for changes.

	* Convert the 'sel-parse' library to 'sel'.

	* ipmi-sel/ipmi-sel.h: Rename to ipmi-sel_.h to avoid naming
	conflict.
	
2012-05-14  Albert Chu <chu11@llnl.gov>

	* Various code cleanup when calling ipmi_sdr_cache_iterate
	callbacks.
	
2012-05-13  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/api/ipmi-api.h,
	libfreeipmi/api/ipmi-api.c (ipmi_ctx_get_target): New function.

	* libfreeipmi/sel-parse/ipmi-sel-parse.c (ipmi_sel_parse_ctx_create):
	Check that sdr is open for reading and ipmi_ctx open.

	* libfreeipmi/fru-parse/ipmi-fru-parse.c (ipmi_fru_parse_ctx_create):
	Check that ipmi_ctx is open.

	* libfreeipmi/sensor_read/ipmi-sensor_read.c (ipmi_sensor_read_ctx_create):
	Check that ipmi_ctx is open.

	* ipmi-sel/: Update for API changes.
	
2012-05-12  Albert Chu <chu11@llnl.gov>

	Merge sdrrearch branch. 

	* libfreeipmi/include/freeipmi/sdr/ipmi-sdr.h, libfreeipmi/sdr:
	Turn sdr-cache libfreeipmi sub-library into sdr sub-library.

	* libfreeipmi/include/freeipmi/sdr-parse/ipmi-sdr-parse.h,
	libfreeipmi/sdr-parse: Remove sub-library. Fold into sdr
	sub-library.  Support ability to call parsing functions w/o
	passing in sdr buffer and using internal buffer during iteration.
