@@ -673,24 +673,16 @@ event_output_event (pstdout_state_t pstate,
 		    ipmi_sel_ctx_t sel_ctx,
 		    uint8_t *sel_record,
 		    unsigned int sel_record_len,
-		    struct ipmi_oem_data *oem_data,
-		    int interpret_oem_data,
 		    int comma_separated_output,
 		    int debug,
 		    unsigned int flags)
 {
-  char fmtbuf[EVENT_FMT_BUFLEN+1];
   char outbuf[EVENT_OUTPUT_BUFLEN+1];
   int outbuf_len = 0;
-  char *fmt;
-  uint8_t event_type_code;
-  uint8_t event_data2_flag;
-  uint8_t event_data3_flag;
-  int check_for_half_na = 0;
   int ret;
-
+  
   assert (sel_ctx);
-
+  
   if ((ret = _sel_parse_record_string (pstate,
                                        sel_ctx,
                                        sel_record,
@@ -699,12 +691,12 @@ event_output_event (pstdout_state_t pstate,
                                        flags,
                                        outbuf,
                                        &outbuf_len,
-				       "%e")) < 0)
+				       "%E")) < 0)
     return (-1);
   
   if (!ret)
     return (0); 
-
+  
   if (comma_separated_output)
     {
       if (outbuf_len)
@@ -720,165 +712,6 @@ event_output_event (pstdout_state_t pstate,
 	PSTDOUT_PRINTF (pstate, " | %s", EVENT_NA_STRING);
     }
 
-  if ((ret = event_data_info (pstate,
-			      sel_ctx,
-			      sel_record,
-			      sel_record_len,
-			      debug,
-			      NULL,
-			      NULL,
-			      NULL,
-			      &event_type_code,
-			      &event_data2_flag,
-			      &event_data3_flag,
-			      NULL,
-			      NULL)) < 0)
-    return (-1);
-  
-  if (!ret)
-    return (0);
-
-  /* note: previously set sel parse library separator to " ; " 
-   * so some places where there could be two outputs
-   * would be separated by a semi-colon 
-   */
-
-  memset (fmtbuf, '\0', EVENT_FMT_BUFLEN+1);
-
-  /* OEM Interpretation 
-   * 
-   * Dell Poweredge 2900
-   * Dell Poweredge 2950
-   * Dell Poweredge R610
-   * Dell Poweredge R710
-   * 
-   * Unique condition, event_data2_flag and event_data3_flag are 
-   * listed as "unspecified", so we need to handle this as a
-   * special case.
-   */
-  if (interpret_oem_data
-      && oem_data->manufacturer_id == IPMI_IANA_ENTERPRISE_ID_DELL
-      && (oem_data->product_id == IPMI_DELL_PRODUCT_ID_POWEREDGE_2900
-	  || oem_data->product_id == IPMI_DELL_PRODUCT_ID_POWEREDGE_2950
-	  || oem_data->product_id == IPMI_DELL_PRODUCT_ID_POWEREDGE_R610
-	  || oem_data->product_id == IPMI_DELL_PRODUCT_ID_POWEREDGE_R710))
-    {
-      uint8_t sensor_type;
-      
-      if ((ret = event_data_info (pstate,
-				  sel_ctx,
-				  sel_record,
-				  sel_record_len,
-				  debug,
-				  NULL,
-				  &sensor_type,
-				  NULL,
-				  NULL,
-				  NULL,
-				  NULL,
-				  NULL,
-				  NULL)) < 0)
-	return (-1);
-      
-      if (!ret)
-	return (0);
-      
-      if (sensor_type == IPMI_SENSOR_TYPE_OEM_DELL_LINK_TUNING
-	  && event_type_code == IPMI_EVENT_READING_TYPE_CODE_OEM_DELL_OEM_DIAGNOSTIC_EVENT_DATA)
-	{
-	  strcat (fmtbuf, "%f ; %h");
-	  goto output;
-	}
-    }
-
-  if (event_data2_flag != IPMI_SEL_EVENT_DATA_UNSPECIFIED_BYTE
-      && event_data3_flag != IPMI_SEL_EVENT_DATA_UNSPECIFIED_BYTE)
-    {
-      /* will effectively output "%f ; %h" if combined output not 
-       * available or reasonable 
-       */
-      strcat (fmtbuf, "%c");
-      check_for_half_na++;
-    }
-  else if (event_data2_flag != IPMI_SEL_EVENT_DATA_UNSPECIFIED_BYTE)
-    strcat (fmtbuf, "%f");
-  else if (event_data3_flag != IPMI_SEL_EVENT_DATA_UNSPECIFIED_BYTE)
-    strcat (fmtbuf, "%h");
-  else
-    goto out;
-
- output:
-
-  fmt = fmtbuf;
-
-  if ((ret = _sel_parse_record_string (pstate,
-                                       sel_ctx,
-                                       sel_record,
-                                       sel_record_len,
-                                       debug,
-                                       flags,
-                                       outbuf,
-                                       &outbuf_len,
-				       fmt)) < 0)
-    return (-1);
-  
-  if (!ret)
-    return (0); 
-
-  /* If event_data2 and event_data3 flags are valid, it normally
-   * shouldn't be possible that we read "N/A". However, it happens, 
-   * most notably when the event_data2 and / or event_data3 data are 
-   * 0xFF.
-   */
-  if (!strcasecmp (outbuf, EVENT_NA_STRING))
-    outbuf_len = 0;
-
-  /* Special case: 
-   *
-   * It's possible the SEL record event_data2_flag and 
-   * event_data3_flag are bad, and you get a N/A output anyways 
-   * (perhaps b/c the event_data2 or event_data3 data is unspecified).
-   * If this is the case you can get a strange: "N/A ; text" or "text 
-   * ; N/A" instead of just "text". Deal with it appropriately.
-   *
-   */
-  if (outbuf_len && check_for_half_na)
-    {
-      char *na_ptr;
-      char *semicolon_ptr;
-
-      if ((na_ptr = strstr (outbuf, EVENT_NA_STRING))
-	  && (semicolon_ptr = strstr (outbuf, EVENT_OUTPUT_SEPARATOR)))
-	{
-	  memset (fmtbuf, '\0', EVENT_FMT_BUFLEN+1);
-
-	  if (na_ptr < semicolon_ptr)
-	    strcat (fmtbuf, "%h");
-	  else
-	    strcat (fmtbuf, "%f");
-
-	  fmt = fmtbuf;
-
-	  if ((ret = _sel_parse_record_string (pstate,
-					       sel_ctx,
-					       sel_record,
-					       sel_record_len,
-					       debug,
-					       flags,
-					       outbuf,
-					       &outbuf_len,
-					       fmt)) < 0)
-	    return (-1);
-	  
-	  if (!ret)
-	    return (0); 
-	}
-    }
-  
-  if (outbuf_len)
-    PSTDOUT_PRINTF (pstate, " ; %s", outbuf);
-  
- out:
   return (1);
 }
 
